starting win32 support

--- a/lib/json/CMakeLists.txt
+++ b/lib/json/CMakeLists.txt
@@ -5,4 +5,6 @@ file(GLOB jsoncpp_header *.h)
 add_library(json SHARED ${jsoncpp_source})
 
 install(FILES ${jsoncpp_header} DESTINATION include/json) 
-install(TARGETS json LIBRARY DESTINATION lib)
+install(TARGETS json LIBRARY DESTINATION lib
+                      ARCHIVE DESTINATION lib
+                      RUNTIME DESTINATION bin)
