using newest mongoose release

--- a/lib/jsonrpc/CMakeLists.txt
+++ b/lib/jsonrpc/CMakeLists.txt
@@ -5,9 +5,7 @@ file(GLOB connector_header connectors/*.h)
 
 add_library(jsonrpc SHARED ${jsonrpc_source})
 
-target_link_libraries(jsonrpc json)
-target_link_libraries(jsonrpc mongoose)
-
+target_link_libraries(jsonrpc json mongoose)
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
 install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors) 
