supporting win32, linux and mac os

--- a/lib/mongoose/CMakeLists.txt
+++ b/lib/mongoose/CMakeLists.txt
@@ -9,6 +9,10 @@ if(UNIX)
     target_link_libraries(mongoose dl pthread)
 endif(UNIX)
 
+if(WIN32)
+    target_link_libraries(mongoose Ws2_32)
+endif(WIN32)
+
 install(FILES ${mongoose_header} DESTINATION include/mongoose) 
 install(TARGETS mongoose LIBRARY DESTINATION lib
                       ARCHIVE DESTINATION lib
