providing more resource files in out directory; embedded license

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,4 @@
+file(COPY res DESTINATION ${CMAKE_BINARY_DIR}/out)
 
 add_executable(jsonrpcsample main.cpp)
 target_link_libraries(jsonrpcsample jsonrpc)
