--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,7 @@
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR}/out)
 
-add_executable(jsonrpcsample main.cpp)
-target_link_libraries(jsonrpcsample jsonrpc)
+add_executable(jsonrpcserversample simpleserver.cpp)
+target_link_libraries(jsonrpcserversample jsonrpc)
+
+add_executable(jsonrpcclientsample simpleclient.cpp)
+target_link_libraries(jsonrpcclientsample jsonrpc)
