--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,5 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/out)
 
 add_subdirectory(lib)
 add_subdirectory(example)
-
+add_subdirectory(stubgenerator)
 
