added uninstall function

--- a/stubgenerator/CMakeLists.txt
+++ b/stubgenerator/CMakeLists.txt
@@ -3,4 +3,6 @@ file(GLOB_RECURSE jsonrpcstub_source *.cpp)
 add_executable(jsonrpcstub ${jsonrpcstub_source})
 target_link_libraries(jsonrpcstub jsonrpc)
 
-file(COPY jsonrpcstub.tpl method.tpl DESTINATION ${CMAKE_BINARY_DIR}/out)
+install(TARGETS jsonrpcstub LIBRARY DESTINATION lib
+                      ARCHIVE DESTINATION lib
+                      RUNTIME DESTINATION bin)
