--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,12 @@ add_subdirectory(lib)
 add_subdirectory(example)
 add_subdirectory(stubgenerator)
 
+
+# uninstall target
+configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY)
+
+add_custom_target(uninstall
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
