--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,3 +5,6 @@ target_link_libraries(jsonrpcserversample jsonrpc)
 
 add_executable(jsonrpcclientsample simpleclient.cpp)
 target_link_libraries(jsonrpcclientsample jsonrpc)
+
+add_executable(jsonrpcstubclient simplestubclient.cpp)
+target_link_libraries(jsonrpcstubclient jsonrpc)
