added alternative installer for osx and windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,18 @@ INCLUDE(InstallRequiredSystemLibraries)
 
 SET(CPACK_SET_DESTDIR "on")
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
-SET(CPACK_GENERATOR "DEB")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	SET(CPACK_GENERATOR "PackageMaker")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	SET(CPACK_GENERATOR "DEB,RPM")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+	SET(CPACK_GENERATOR "NSIS")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 SET(CPACK_PACKAGE_DESCRIPTION "jsonrpc framework for C++, including server and client support with stubgenerator.")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "jsonrpc framework for C++")
