--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,26 @@ INCLUDE(InstallRequiredSystemLibraries)
 
 SET(CPACK_PACKAGE_NAME "libjsonrpccpp-dev")
 SET(CPACK_SET_DESTDIR "on")
-SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
-SET(CPACK_GENERATOR "DEB")
+
+
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.txt")
 SET(CPACK_RESOURCE_FILE_README  "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	SET(CPACK_GENERATOR "PackageMaker")
+	SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	SET(CPACK_GENERATOR "DEB;RPM")
+	SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+	SET(CPACK_GENERATOR "NSIS")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+
 SET(CPACK_PACKAGE_DESCRIPTION "jsonrpc framework for C++, including server and client support with stubgenerator.")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "jsonrpc framework for C++")
 SET(CPACK_PACKAGE_VENDOR "Peter Spiess-Knafl")
