--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	SET(CPACK_GENERATOR "DEB;RPM")
+	SET(CPACK_GENERATOR "DEB")
 	SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
