started providing static versions of libraries

--- a/lib/jsonrpc/CMakeLists.txt
+++ b/lib/jsonrpc/CMakeLists.txt
@@ -5,13 +5,17 @@ file(GLOB connector_header connectors/*.h)
 find_package(CURL REQUIRED)
 
 add_library(jsonrpc SHARED ${jsonrpc_source})
+add_library(jsonrpcStatic STATIC ${jsonrpc_source})
+
+set_target_properties(jsonrpcStatic PROPERTIES OUTPUT_NAME jsonrpc)
 
 target_link_libraries(jsonrpc json mongoose ${CURL_LIBRARIES})
+target_link_libraries(jsonrpcStatic json mongoose ${CURL_LIBRARIES})
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
 install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors) 
 
-install(TARGETS jsonrpc LIBRARY DESTINATION lib
+install(TARGETS jsonrpc jsonrpcStatic LIBRARY DESTINATION lib
                       ARCHIVE DESTINATION lib
                       RUNTIME DESTINATION bin)
 
