renamed to abstract connectors

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,5 +6,5 @@ target_link_libraries(jsonrpcserversample jsonrpc)
 add_executable(jsonrpcclientsample simpleclient.cpp)
 target_link_libraries(jsonrpcclientsample jsonrpc)
 
-add_executable(jsonrpcstubclient simplestubclient.cpp)
-target_link_libraries(jsonrpcstubclient jsonrpc)
+#add_executable(jsonrpcstubclient simplestubclient.cpp)
+#target_link_libraries(jsonrpcstubclient jsonrpc)
