--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries(remotecalculator jsonrpc)
 
 add_executable(errorhandling errorhandling.cpp ${COMMON_SOURCES})
 target_link_libraries(errorhandling jsonrpc)
+
+add_executable(jsonrpcprotocol jsonrpcprotocol.cpp ${COMMON_SOURCES})
+target_link_libraries(jsonrpcprotocol jsonrpc)
