--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,10 +1,12 @@
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR}/out)
 
-add_executable(jsonrpcserversample simpleserver.cpp)
-target_link_libraries(jsonrpcserversample jsonrpc)
+if(USE_HTTP)
+  add_executable(jsonrpcserversample simpleserver.cpp)
+  target_link_libraries(jsonrpcserversample jsonrpc)
 
-add_executable(jsonrpcclientsample simpleclient.cpp)
-target_link_libraries(jsonrpcclientsample jsonrpc)
+  add_executable(jsonrpcclientsample simpleclient.cpp)
+  target_link_libraries(jsonrpcclientsample jsonrpc)
 
-#add_executable(jsonrpcstubclient simplestubclient.cpp)
-#target_link_libraries(jsonrpcstubclient jsonrpc)
+  #add_executable(jsonrpcstubclient simplestubclient.cpp)
+  #target_link_libraries(jsonrpcstubclient jsonrpc)
+endif()
