--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ add_subdirectory(lib)
 #add_subdirectory(example)
 add_subdirectory(stubgenerator)
 
-#add_subdirectory(test)
+add_subdirectory(test)
 
 
 # uninstall target
