--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -2,14 +2,13 @@ file(GLOB_RECURSE jsonrpc_source *.cpp)
 file(GLOB jsonrpc_header *.h)
 file(GLOB connector_header connectors/*.h)
 
-
 add_library(jsonrpc SHARED ${jsonrpc_source})
 add_library(jsonrpcStatic STATIC ${jsonrpc_source})
 
 set_target_properties(jsonrpcStatic PROPERTIES OUTPUT_NAME jsonrpc)
 
-target_link_libraries(jsonrpc json mongoose ${CURL_LIBRARIES})
-target_link_libraries(jsonrpcStatic json mongoose ${CURL_LIBRARIES})
+target_link_libraries(jsonrpc jsoncpp mongoose ${CURL_LIBRARIES})
+target_link_libraries(jsonrpcStatic jsoncpp mongoose ${CURL_LIBRARIES})
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
 install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors) 
