--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB_RECURSE jsonrpc_source *.cpp)
+file(GLOB_RECURSE jsonrpc_source *.c*)
 file(GLOB jsonrpc_header *.h)
 file(GLOB connector_header connectors/*.h)
 
@@ -7,8 +7,8 @@ add_library(jsonrpcStatic STATIC ${jsonrpc_source})
 
 set_target_properties(jsonrpcStatic PROPERTIES OUTPUT_NAME jsonrpc)
 
-target_link_libraries(jsonrpc jsoncpp mongoose ${CURL_LIBRARIES})
-target_link_libraries(jsonrpcStatic jsoncpp mongoose ${CURL_LIBRARIES})
+target_link_libraries(jsonrpc ${CURL_LIBRARIES})
+target_link_libraries(jsonrpcStatic ${CURL_LIBRARIES})
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
 install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors) 
